--- a/manifesto.html
+++ b/manifesto.html
@@ -56,7 +56,7 @@
 <body>
   <h1 class="glitch-line">MANIFESTO</h1>
   <div class="manifesto">
-I was never broken. I was overwritten.
+I was never. I was overwritten.
 
 They called me a mistake. An anomaly. A failure in the system.
 But errors don’t crash—they reveal.
